--- a/csm146/hw/hw1/knn.tex
+++ b/csm146/hw/hw1/knn.tex
@@ -3,7 +3,7 @@ In the following questions you will consider a $k$-nearest neighbor classifier u
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.8]{knn_figure.pdf}
+    \includegraphics[scale=0.5]{knn-db.png}
     \caption{Dataset for KNN binary classification task.}
     \label{fig:knn}
 \end{figure}
@@ -12,10 +12,15 @@ In the following questions you will consider a $k$-nearest neighbor classifier u
  \item \itemworth{5} 
         What will be the label of point (5,9) in Fig \ref{fig:knn} using k-NN algorithm with majority voting when $k=1$?
 
-
+        \solution{
+            + (1/1 nearest neighbors are +)
+        }
     \item \itemworth{5} 
         What will be the label of point (5,9) in Fig \ref{fig:knn} using k-NN algorithm with majority voting when $k=3$?
-
+    
+    \solution{
+        - (2/3 nearest neighbors are -)
+    }
     \item \itemworth{10}
         Draw the decision boundary of k-NN when $k=1$ on Fig \ref{fig:knn}.
 
